--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>ompartners</groupId>
+    <artifactId>DataBaseUpgradeApp</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
     <build>
+        <directory>target</directory>
+        <outputDirectory>target/classes</outputDirectory>
+        <testOutputDirectory>target/test-classes</testOutputDirectory>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -14,6 +23,16 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
     </build>
     <dependencies>
         <dependency>
@@ -32,9 +51,7 @@
             <version>2.5</version>
         </dependency>
     </dependencies>
-    <groupId>ompartners</groupId>
-    <artifactId>DataBaseUpgradeApp</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
 
     
 </project>
