--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,11 @@
             <artifactId>log4j</artifactId>
             <version>RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
 
